[tool.poetry]
name = "dag"
version = "0.1.0"
description = ""
authors = ["ChihYu Yeh <chihyu.jimmy.yeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
networkx = "^3.4.2"
matplotlib = "^3.9.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
